2004-06-11  Federico Mena Quintero  <federico@ximian.com>

	Merge from HEAD:

	Fixes #143578:

	* gtk/gtkfilesystemmodel.c (_gtk_file_system_model_add_editable):
	Don't ref the editable node.
	(_gtk_file_system_model_remove_editable): Don't unref the editable node.
	(_gtk_file_system_model_remove_editable): Ahem, free the node.

	* gtk/gtkfilechooserdefault.c (struct _GtkFileChooserDefault):
	Added fields for edited_idle and edited_new_text.
	(renderer_edited_cb): Queue the
	creation of the folder in an idle handler.
	(renderer_editing_canceled_cb): Likewise for the cancellation.
	(gtk_file_chooser_default_finalize): Free the impl->edited_new_text.

2004-06-11  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version to 2.4.4

	* === Released 2.4.3 ===

Thu Jun 10 22:15:01 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmain.c (gtk_parse_args): Typo fix.

Thu Jun 10 21:16:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_destroy): 
	Check whether priv->box is NULL before disconnecting
	from its signals.  Fix merged from HEAD.

2004-06-10  Federico Mena Quintero  <federico@ximian.com>

	Merge from HEAD:

	Fixes #144110, patch by Bastien Nocera <hadess@hadess.net>.

	* gtk/gtkfilechooser.c (gtk_file_chooser_list_shortcut_folders):
	Refer to gtk_file_chooser_add_shortcut_folder().
	(gtk_file_chooser_list_shortcut_folder_uris): Refer to
	gtk_file_chooser_add_shortcut_folder_uri().

Thu Jun 10 00:36:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_main_button): Start 
	the drag before focusing the selected.day.
	* gtk/gtkcalendar.c (gtk_calendar_state_changed): Stop
	a beginning drag if the widget becomes insensitive.

Thu Jun 10 00:05:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_button_press): Start 
	spinning before calling arrow_action(), so that a signal
	handler triggered from arrow_action() has a chance to 
	stop the spinning.  (#143966, Davyd Madeley)
